fix: Work History 2 Verify at link

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
                 </ul>
                 <a href="assets/Salesforce_cert.pdf" target="_blank"><i class="fa fa-link"></i> Completion
                     Certificate</a> | <a
-                    href="https://smartinternz.com/internships/salesforce_certificates/76c073d8a82d9ddaf993300be03ac70f">
+                    href="https://smartinternz.com/internships/salesforce_certificates/76c073d8a82d9ddaf993300be03ac70f"
+                    target="_blank">
                     <i class="fa fa-link"></i><em> verify at</em>
                 </a>
             </div>
