update: project 1,4,5 links & target

--- a/project1.html
+++ b/project1.html
@@ -19,7 +19,8 @@
         <h1>Digital Resume</h1>
 
         <ul>
-            <li><a class="project-link" href="">Source Code</a></li>
+            <li><a class="project-link" href="https://github.com/nishith-narukulla/Digital-Resume"
+                    target="_blank">Source Code</a></li>
         </ul>
 
         <p>
