fix: links target for certifications

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <h3>Programming for Everybody | Python Programming</h3>
                         <p>
                             by Coursera |
-                            <a href="https://coursera.org/verify/EXJ8YDQLV9WW">
+                            <a href="https://coursera.org/verify/EXJ8YDQLV9WW" target="_blank">
                                 <i class="fa fa-circle-check"></i> verify
                             </a>
                         </p>
@@ -231,7 +231,7 @@
                         <h3>Programming Fundementals | HTML, CSS, JavaScript</h3>
                         <p>
                             by Coursera |
-                            <a href="https://coursera.org/verify/5ZSS38K5CTU4">
+                            <a href="https://coursera.org/verify/5ZSS38K5CTU4" target="_blank">
                                 <i class="fa fa-circle-check"></i> verify
                             </a>
                         </p>
@@ -248,7 +248,7 @@
                         <h3>Foundations of Git | <br>Git, GitKraken</h3>
                         <p>
                             by GitKraken |
-                            <a href="https://learn.gitkraken.com/certificates/fcitwpial3">
+                            <a href="https://learn.gitkraken.com/certificates/fcitwpial3" target="_blank">
                                 <i class="fa fa-circle-check"></i> verify
                             </a>
                         </p>
@@ -265,7 +265,7 @@
                         <h3>Introduction to Electronics | Transistors, Op-Amps</h3>
                         <p>
                             by Coursera |
-                            <a href="https://coursera.org/verify/4XMWRKD425MB">
+                            <a href="https://coursera.org/verify/4XMWRKD425MB" target="_blank">
                                 <i class="fa fa-circle-check"></i> verify
                             </a>
                         </p>
@@ -282,7 +282,7 @@
                         <h3>Power Electronic Circuit Design | PCB Designing, Sensors</h3>
                         <p>
                             by NDLI Club |
-                            <a class="pointer-disable" href="">
+                            <a class="pointer-disable" href="" target="_blank">
                                 <i class="fa fa-circle-check"></i> verify
                             </a>
                         </p>
@@ -299,7 +299,7 @@
                         <h3>Sales & CRM Overview | <br>Salesforce, Trailhead</h3>
                         <p>
                             by Coursera |
-                            <a href="">
+                            <a href="https://coursera.org/verify/ED4WZSQHQA3A" target="_blank">
                                 <i class="fa fa-circle-check"></i> verify
                             </a>
                         </p>
