--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div id="bio">
                 <h1 id="user-name">Nishith Narukulla</h1>
-                <p id="sub-content">Ex-Intern @Amazon</p>
+                <p id="sub-content">Former-Intern @Amazon</p>
                 <p id="summary">To leverage my technical skills, creativity, and passion for problem-solving in a
                     software engineering role. I aim to
                     contribute to the development of innovative software solutions that enhance user experiences,
@@ -55,10 +55,8 @@
                 <a href="https://github.com/nishith-narukulla" target="_blank"><i class="fa-brands fa-github"></i>
                     Github
                 </a>
-                <a href="https://www.salesforce.com/trailblazer/nishithnarukulla52" target="_blank">Trailblazer
-
-                </a>
-                <a href="./assets/Resume.pdf" target="_blank"><i class="fa fa-download"></i> Download Resume
+                <a href="./assets/Nishith_Narukulla_Resume.pdf" target="_blank"><i class="fa fa-download"></i> Download
+                    Resume
                 </a>
             </div>
         </section> <!-- end of social-links-->
@@ -77,7 +75,7 @@
                         <p class="major"><span class="content-title">Major:</span> Electrical and Electronics
                             Engineering
                         </p>
-                        <p class="aggregate"><span class="content-title">CGPA:</span> 8.47</p>
+                        <p class="aggregate"><span class="content-title">CGPA:</span> 8.42</p>
                         <p class="duration"><span class="content-title">Academic Term:</span> 2019 - 2023</p>
                     </div>
 
@@ -88,7 +86,7 @@
                             <span class="location">Khammam</span>
                         </i>
                         <p class="study-type"><span class="content-title">Field:</span> Science</p>
-                        <p class="major"><span class="content-title">Major:</span> Maths, Physics, Chemistry</p>
+                        <p class="major"><span class="content-title">Major:</span> (MPC)Maths, Physics, Chemistry</p>
                         <p class="aggregate"><span class="content-title">Aggregate:</span> 97.6%</p>
                         <p class="duration"><span class="content-title">Academic Term:</span> 2017 - 2019</p>
                     </div>
@@ -100,19 +98,19 @@
             <h2>Technical Skills</h2>
             <div id="techstack-wrapper">
                 <div class="techstack-item">
-                    <span>Python, Java, C</span>
+                    <span>Python, JavaScript, SQL</span>
+                </div>
+                <div class="techstack-item">
+                    <span>HTML, CSS, Saas</span>
+                </div>
+                <div class="techstack-item">
+                    <span>Git, Linux</span>
+                </div>
+                <div class="techstack-item">
+                    <span>Java</span>
                 </div>
                 <div class="techstack-item">
                     <span>Problem solving, Data Structures and Algorithms</span>
-                </div>
-                <div class="techstack-item">
-                    <span>Git, AWS, Linux</span>
-                </div>
-                <div class="techstack-item">
-                    <span>HTML, CSS</span>
-                </div>
-                <div class="techstack-item">
-                    <span>JavaScript, Materialize CSS</span>
                 </div>
             </div>
         </section><!-- end of Skills-->
